monthSelect refactor done. changed select input to button grid to mimic a calendar. also collapsed various month components into one monthSelect component, which conditionally renders correct numbers of buttons depending on days in month.

--- a/src/components/Books/Card.css
+++ b/src/components/Books/Card.css
@@ -35,3 +35,14 @@
     display: flex;
     justify-content: right;
 }
+
+.dayInt__button {
+    margin: 10px;
+    min-width: 35px;
+
+}
+
+.card__body {
+    display: flex;
+    justify-content: center;
+}
